[gd_scene load_steps=8 format=2]

[ext_resource path="res://screens/LevelSelect.gd" type="Script" id=1]
[ext_resource path="res://assets/images/button.png" type="Texture" id=2]
[ext_resource path="res://galagaTheme.tres" type="Theme" id=3]
[ext_resource path="res://assets/images/ship.png" type="Texture" id=4]
[ext_resource path="res://assets/images/FullScreen - Copy.png" type="Texture" id=5]
[ext_resource path="res://assets/images/Lock.png" type="Texture" id=6]
[ext_resource path="res://assets/images/ColeTests/ship.png" type="Texture" id=7]

[node name="LevelSelect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = -2.0
margin_right = 2.0
margin_bottom = -2.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_top = 4.0
margin_right = 104.0
margin_bottom = 64.0
rect_scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 5 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 39, 52 )
scale = Vector2( 0.383333, 0.225 )
normal = ExtResource( 2 )

[node name="TouchScreenButton2" type="TouchScreenButton" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 263, 309 )
scale = Vector2( 0.351667, 0.196 )
normal = ExtResource( 2 )
shape_centered = false
visibility_mode = 1

[node name="p1Place" type="TouchScreenButton" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 154, 162 )
scale = Vector2( 0.1, 0.0620001 )
normal = ExtResource( 2 )
shape_centered = false
visibility_mode = 1

[node name="p2Place" type="TouchScreenButton" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 370, 399 )
scale = Vector2( 0.1, 0.0620001 )
normal = ExtResource( 2 )
shape_centered = false
visibility_mode = 1

[node name="p3Place" type="TouchScreenButton" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 569, 140 )
scale = Vector2( 0.1, 0.0620001 )
normal = ExtResource( 2 )
shape_centered = false
visibility_mode = 1

[node name="p4Place" type="TouchScreenButton" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 776, 398 )
scale = Vector2( 0.1, 0.0620001 )
normal = ExtResource( 2 )
shape_centered = false
visibility_mode = 1

[node name="TouchScreenButton4" type="TouchScreenButton" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 496, 59 )
scale = Vector2( 0.255, 0.127 )
normal = ExtResource( 2 )

[node name="TouchScreenButton5" type="TouchScreenButton" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 690, 317 )
scale = Vector2( 0.253333, 0.156 )
normal = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 154, 137 )
scale = Vector2( 6, 6 )
texture = ExtResource( 4 )

[node name="ColeShip" type="Sprite" parent="."]
visible = false
position = Vector2( 154, 137 )
scale = Vector2( 6, 6 )
texture = ExtResource( 7 )

[node name="ChhimiShip" type="Sprite" parent="."]
visible = false
position = Vector2( 154, 137 )
scale = Vector2( 6, 6 )
texture = ExtResource( 4 )

[node name="KyleShip" type="Sprite" parent="."]
visible = false
position = Vector2( 154, 137 )
scale = Vector2( 6, 6 )
texture = ExtResource( 4 )

[node name="ZacShip" type="Sprite" parent="."]
visible = false
position = Vector2( 154, 137 )
scale = Vector2( 6, 6 )
texture = ExtResource( 4 )

[node name="BackButton" type="Button" parent="."]
margin_left = 838.0
margin_top = 485.0
margin_right = 956.0
margin_bottom = 538.0
theme = ExtResource( 3 )
text = "Go!"

[node name="BackButton2" type="Button" parent="."]
margin_top = 473.0
margin_right = 118.0
margin_bottom = 541.0
theme = ExtResource( 3 )
text = "Back"

[node name="Tween" type="Tween" parent="."]

[node name="Lock2" type="Sprite" parent="."]
position = Vector2( 463, 238 )
scale = Vector2( 0.200439, 0.300715 )
texture = ExtResource( 6 )

[node name="Lock3" type="Sprite" parent="."]
position = Vector2( 663, -37 )
scale = Vector2( 0.200439, 0.300715 )
texture = ExtResource( 6 )

[node name="Lock4" type="Sprite" parent="."]
position = Vector2( 858, 233 )
scale = Vector2( 0.200439, 0.300715 )
texture = ExtResource( 6 )